--- a/quiz-client/src/App.css
+++ b/quiz-client/src/App.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
 }
-
+.content {
+  display: flex;
+  justify-content: space-around;
+  flex-flow: row wrap;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
