--- a/quiz-client/src/components/Profile.css
+++ b/quiz-client/src/components/Profile.css
@@ -76,9 +76,12 @@ body {
 }
 
 .content {
-    display: flex;
-    justify-content: space-around;
-    flex-flow: row wrap;
+    display: grid;
+        grid-template-rows: auto;        
+        margin-left: auto;
+        margin-right: auto;
+    
+        background: rgba(114, 186, 94, 0.05);
 }
 
 .card {
